@@ -1,3 +1,4 @@
+12/06/2012
 a_0.02 Change Log:
 
 -Zombies now 75% less braindead (no more running into each other and doorframes)
@@ -5,6 +6,7 @@ a_0.02 Change Log:
 -XP bar woop
 -'?' now shows all controls
 
+13/06/2012
 a_0.03 Change Log:
 
 -Stopped player spawning ontop of zombies (sorry Anne you can't use them as transport :P)
@@ -12,3 +14,4 @@ a_0.03 Change Log:
 -Death messages implimented woot!(soon to be leaderboard)
 -Using an item now counts as a turn
 -bandages now heal 1/3 of the total damage done to the character
+-basic mouse move/attack
